--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,24 @@
 cmake_minimum_required(VERSION 3.15)
 project(grpc_server_example CXX)
 
+find_program(CCACHE_FOUND ccache)
+if(CCACHE_FOUND)
+    set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
+    set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache) # Less useful to do it for linking, see edit2
+endif(CCACHE_FOUND)
+
+#find_package(gRPC REQUIRED)
+#find_package(protobuf_BUILD REQUIRED)
+#find_package(gRPC_BUILD REQUIRED)
+
 find_package(protobuf CONFIG REQUIRED)
+find_package(protobuf_BUILD CONFIG REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
+# ugly hack to get the *build context* grpc plugin via gRPC::grpc_cpp_plugin
+set(CMAKE_CROSSCOMPILING_orig ${CMAKE_CROSSCOMPILING})
+set(CMAKE_CROSSCOMPILING FALSE)
+find_package(gRPC_BUILD CONFIG REQUIRED)
+set(CMAKE_CROSSCOMPILING ${CMAKE_CROSSCOMPILING_orig})
 
 set(PROTO_FILES
     proto/address.proto
@@ -24,10 +40,6 @@ target_include_directories(grpc_server_example PUBLIC include ${CMAKE_CURRENT_BI
 get_target_property(grpc_cpp_plugin_location gRPC::grpc_cpp_plugin LOCATION)
 protobuf_generate(TARGET grpc_server_example LANGUAGE cpp)
 protobuf_generate(TARGET grpc_server_example LANGUAGE grpc GENERATE_EXTENSIONS .grpc.pb.h .grpc.pb.cc PLUGIN "protoc-gen-grpc=${grpc_cpp_plugin_location}")
-
-# get_target_property(grpc_python_plugin_location gRPC::grpc_python_plugin LOCATION)
-# protobuf_generate(TARGET grpc_server_example LANGUAGE python)
-# protobuf_generate(TARGET grpc_server_example LANGUAGE grpc GENERATE_EXTENSIONS .grpc.pb.py PLUGIN "protoc-gen-grpc=${grpc_python_plugin_location}")
 
 set_target_properties(grpc_server_example PROPERTIES
   RESOURCE "${PROTO_FILES}")
