--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,6 +1,9 @@
 set(target server)
 
-add_executable(${target} src/grpc_server_example.cpp src/main.cpp)
+find_package(protobuf REQUIRED)
+find_package(gRPC REQUIRED)
+
+add_executable(${target} route_guide_server.cpp helper.cpp)
 target_link_libraries(${target}
     PUBLIC
         proto
@@ -8,6 +11,6 @@ target_link_libraries(${target}
         gRPC::grpc
         gRPC::grpc++
 )
-target_include_directories(${target} PUBLIC include ${CMAKE_CURRENT_BINARY_DIR}) 
+# target_include_directories(${target} PUBLIC ${CMAKE_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR}) 
 
 install(TARGETS ${target} RESOURCE DESTINATION bin)
